--- a/app.json
+++ b/app.json
@@ -1,12 +1,37 @@
 {
   "pages":[
-    "pages/index/index",
+    "pages/project/index",
+    "pages/freelancer/index",
+    "pages/profile/index",
     "pages/logs/logs"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "linear-gradient(0deg, #2C2C30 1%, #0F1012 100%);",
+    "navigationBarTitleText": "云沃客",
+    "navigationBarTextStyle":"#fff"
+  },
+  "tabBar": {
+    "color": "#6E6E70",
+    "selectedColor": "#FF6700",
+    "borderStyle": "white",
+    "backgroundColor": "#ffffff",
+    "position": "bottom",
+    "list": [{
+      "pagePath": "pages/project/index",
+      "iconPath": "images/icon_project.png",
+      "selectedIconPath": "images/icon_project_selected.png",
+      "text": "找项目"
+    }, {
+      "pagePath": "pages/freelancer/index",
+      "iconPath": "images/icon_people.png",
+      "selectedIconPath": "images/icon_people_selected.png",
+      "text": "找人才"
+    }, {
+      "pagePath": "pages/profile/index",
+      "iconPath": "images/icon_profile.png",
+      "selectedIconPath": "images/icon_profile_selected.png",
+      "text": "我"
+    }]
   }
 }
