--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "pages":[
     "pages/project/index",
-    "pages/project-detail/index",
     "pages/freelancer/index",
     "pages/profile/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/project-detail/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
