--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages":[
     "pages/project/index",
     "pages/freelancer/index",
+    "pages/freelancer-detail/index",
     "pages/profile/index",
     "pages/logs/logs"
   ],
