处理团队成员

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/project/index",
     "pages/freelancer-detail/index",
     "pages/project-detail/index",
+    "pages/team-member/index",
     "pages/comment/index"
   ],
   "window":{
