--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/freelancer-detail/index",
     "pages/project-detail/index",
     "pages/team-member/index",
+    "pages/team-detail/index",
     "pages/comment/index"
   ],
   "window":{
