--- a/app.json
+++ b/app.json
@@ -6,7 +6,6 @@
     "pages/project-detail/index",
     "pages/team-detail/index",
     "pages/team-member/index",
-    "pages/comment/index",
     "pages/proposal/index",
     "pages/proposal-detail/index",
     "pages/invite-detail/index",
@@ -36,7 +35,7 @@
       "selectedIconPath": "images/icon_people_selected.png",
       "text": "找人才"
     }, {
-      "pagePath": "pages/signin/index",
+      "pagePath": "pages/profile/index",
       "iconPath": "images/icon_profile.png",
       "selectedIconPath": "images/icon_profile_selected.png",
       "text": "我"
