--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages":[
+    "pages/signin/index",
     "pages/project/index",
     "pages/freelancer/index",
     "pages/freelancer-detail/index",
@@ -10,8 +11,7 @@
     "pages/proposal-detail/index",
     "pages/job-invite/index",
     "pages/invite-detail/index",
-    "pages/profile/index",
-    "pages/signin/index"
+    "pages/profile/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
